fixed uneven spacing

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@
 
 .bio-container {
   border: 0px solid #FFC784;
+  margin-bottom: 50px;
   border-spacing: 200px;
   border-width: 5px;
   border-radius: 50px;
